--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "firebase": "^7.5.2",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
